@@ -199,7 +199,7 @@ def slice_templates(params, to_remove=[], to_merge=[], extension=''):
     data_file      = params.data_file
     N_e            = params.getint('data', 'N_e')
     N_total        = params.nb_channels
-    compression    = params.getboolean('data', 'compression')
+    hdf5_compress  = params.getboolean('data', 'hdf5_compress')
     N_t            = params.getint('detection', 'N_t')
     template_shift = params.getint('detection', 'template_shift')
 
@@ -245,7 +245,7 @@ def slice_templates(params, to_remove=[], to_merge=[], extension=''):
 
 
         templates = templates.tocoo()
-        if compression:
+        if hdf5_compress:
             hfile.create_dataset('temp_x', data=templates.row, compression='gzip')
             hfile.create_dataset('temp_y', data=templates.col, compression='gzip')
             hfile.create_dataset('temp_data', data=templates.data, compression='gzip')
@@ -269,7 +269,7 @@ def slice_clusters(params, result, to_remove=[], to_merge=[], extension='', ligh
     data_file      = params.data_file
     N_e            = params.getint('data', 'N_e')
     N_total        = params.nb_channels
-    compression    = params.getboolean('data', 'compression')
+    hdf5_compress  = params.getboolean('data', 'hdf5_compress')
     N_t            = params.getint('detection', 'N_t')
     template_shift = params.getint('detection', 'template_shift')
 
@@ -313,7 +313,7 @@ def slice_clusters(params, result, to_remove=[], to_merge=[], extension='', ligh
         cfile    = h5py.File(file_out_suff + '.clusters-new.hdf5', 'w', libver='earliest')
         to_write = ['data_', 'clusters_', 'times_', 'peaks_']
         for ielec in xrange(N_e):
-            write_datasets(cfile, to_write, result, ielec, compression=compression)
+            write_datasets(cfile, to_write, result, ielec, compression=hdf5_compress)
 
         write_datasets(cfile, ['electrodes'], result)
         cfile.close()
