@@ -47,7 +47,7 @@ def data_stats(params, show=True, export_times=False):
              "Waveform alignment          : %s" %params.getboolean('detection', 'alignment'),
              "Snippet isolation           : %s" %params.getboolean('detection', 'isolation'),
              "Template Extraction         : %s" %params.get('clustering', 'extraction'),
-             "HDF5 compression            : %s" %params.getboolean('data', 'compression'),
+             "Blosc compression           : %s" %params.getboolean('data', 'blosc_compress'),
              "Overwrite                   : %s" %params.get('data', 'overwrite'),
              "Collect all spikes          : %s" %params.getboolean('fitting', 'collect_all'),
              "Smart Search                : %s" %params.getboolean('clustering', 'smart_search'),
@@ -1159,7 +1159,7 @@ def collect_data(nb_threads, params, erase=False, with_real_amps=False, with_vol
     file_out_suff  = params.get('data', 'file_out_suff')
     max_chunk      = params.getfloat('fitting', 'max_chunk')
     chunks         = params.getfloat('fitting', 'chunk_size')
-    compression    = params.getboolean('data', 'compression')
+    hdf5_compress  = params.getboolean('data', 'hdf5_compress')
     data_length    = data_stats(params, show=False)
     duration       = int(min(chunks*max_chunk, data_length))
     templates      = load_data(params, 'norm-templates')
@@ -1286,7 +1286,7 @@ def collect_data(nb_threads, params, erase=False, with_real_amps=False, with_vol
         mydata.create_group(key)
         for temp in result[key].keys():
             tmp_path = '%s/%s' %(key, temp)
-            if compression:
+            if hdf5_compress:
                 mydata.create_dataset(tmp_path, data=result[key][temp], compression='gzip')
             else:
                 mydata.create_dataset(tmp_path, data=result[key][temp])
@@ -1347,7 +1347,8 @@ def get_overlaps(params, extension='', erase=False, normalize=True, maxoverlap=T
     data_file      = params.data_file
     N_e            = params.getint('data', 'N_e')
     N_t            = params.getint('detection', 'N_t')
-    compression    = params.getboolean('data', 'compression')
+    hdf5_compress  = params.getboolean('data', 'hdf5_compress')
+    blosc_compress = params.getboolean('data', 'blosc_compress')
     N_total        = params.nb_channels
     file_out_suff  = params.get('data', 'file_out_suff')
     tmp_path       = os.path.join(os.path.abspath(params.get('data', 'data_file_noext')), 'tmp')
@@ -1484,13 +1485,13 @@ def get_overlaps(params, extension='', erase=False, normalize=True, maxoverlap=T
     comm.Barrier()
 
     #We need to gather the sparse arrays
-    over_x    = gather_array(over_x, comm, dtype='int32', compress=compression)
-    over_y    = gather_array(over_y, comm, dtype='int32', compress=compression)
-    over_data = gather_array(over_data, comm, compress=compression)
+    over_x    = gather_array(over_x, comm, dtype='int32', compress=blosc_compress)
+    over_y    = gather_array(over_y, comm, dtype='int32', compress=blosc_compress)
+    over_data = gather_array(over_data, comm, compress=blosc_compress)
 
     if comm.rank == 0:
         hfile      = h5py.File(filename, 'w', libver='earliest')
-        if compression:
+        if hdf5_compress:
             hfile.create_dataset('over_x', data=over_x, compression='gzip')
             hfile.create_dataset('over_y', data=over_y, compression='gzip')
             hfile.create_dataset('over_data', data=over_data, compression='gzip')
@@ -1530,13 +1531,13 @@ def get_overlaps(params, extension='', erase=False, normalize=True, maxoverlap=T
             maxoverlap[i+1:, i] = maxoverlap[i, i+1:]
 
         #Now we need to sync everything across nodes
-        maxlag = gather_array(maxlag, comm, 0, 1, 'int32', compress=compression)
+        maxlag = gather_array(maxlag, comm, 0, 1, 'int32', compress=blosc_compress)
 
         if comm.rank == 0:
             maxlag = maxlag.reshape(comm.size, N_half, N_half)
             maxlag = numpy.sum(maxlag, 0)
 
-        maxoverlap = gather_array(maxoverlap, comm, 0, 1, 'float32', compress=compression)
+        maxoverlap = gather_array(maxoverlap, comm, 0, 1, 'float32', compress=blosc_compress)
         if comm.rank == 0:
             maxoverlap = maxoverlap.reshape(comm.size, N_half, N_half)
             maxoverlap = numpy.sum(maxoverlap, 0)
@@ -1549,7 +1550,7 @@ def get_overlaps(params, extension='', erase=False, normalize=True, maxoverlap=T
                     myfile2.pop(key)
 
             myfile2.create_dataset('version', data=numpy.array(circus.__version__.split('.'), dtype=numpy.int32))
-            if compression:
+            if hdf5_compress:
                 myfile2.create_dataset('maxlag',  data=maxlag, compression='gzip')
                 myfile2.create_dataset('maxoverlap', data=maxoverlap, compression='gzip')
             else:
